<resources>
    <string name="app_name">FIX404</string>
    <string name="resgistrar">Resgistrar</string>
    <string name="ingresar_correo">Ingresar correo</string>
    <string name="ingresar_contrase_a">Ingresar contraseña</string>
    <string name="todo">TODO</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="confirmar_contrase_aa">Confirmar contraseña</string>
    <string-array name="lenguajes">
        <item>PHP</item>
        <item>Java</item>
        <item>C#</item>
    </string-array>
</resources>
