<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantallaRegistro">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="237dp"
        android:layout_height="250dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/circleRe2" />

    <ImageView
        android:id="@+id/circleRegister"
        android:layout_width="275dp"
        android:layout_height="378dp"
        android:contentDescription="TODO"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/circleRegister"
        tools:ignore="ContentDescription,HardcodedText" />

    <ImageView
        android:id="@+id/LoginImage"
        android:layout_width="360dp"
        android:layout_height="276dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.165"
        app:srcCompat="@drawable/register"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="376dp"
        android:layout_height="390dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.866"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/crear_cuenta"
            android:textColor="@color/contrasteLight"
            android:textColorLink="@color/contrasteLight"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="@font/poppins_medium"
            android:text="@string/correo"
            android:textColor="@color/contraste0"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/ingresar_correo"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10sp"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="@font/poppins_medium"
            android:text="@string/contrase_a"
            android:textColor="@color/contraste0"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/ingresar_contrase_a"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10sp"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/confirmar_contrase_a"
            android:textColor="@color/contraste0"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etPasswordRemenber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/confirmar_contrase_aa"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10sp"
            tools:ignore="Autofill,TextFields" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_background"
            android:minHeight="48dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/resgistrar"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck,TextSizeCheck,VisualLintButtonSize,TouchTargetSizeCheck" />

    </LinearLayout>
    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="107dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>